break long links to prevent overflow

--- a/packages/website/src/templates/Blockcontent.module.css
+++ b/packages/website/src/templates/Blockcontent.module.css
@@ -5,6 +5,8 @@
 
 .body {
   color: #061838;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .body strong {
